--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ cachetools==4.2.4
 certifi==2021.10.8
 charset-normalizer==2.0.12
 clang==5.0
+click==8.0.4
 cycler==0.11.0
 dataclasses==0.8
 decorator==4.4.2
 entrypoints==0.4
+filelock==3.4.1
 flatbuffers==1.12
 gast==0.4.0
 google-auth==1.35.0
@@ -18,13 +20,16 @@ google-pasta==0.2.0
 graphviz==0.19.1
 grpcio==1.44.0
 h5py==3.1.0
+huggingface-hub==0.4.0
 idna==3.3
 imageio==2.15.0
 importlib-metadata==4.8.3
+importlib-resources==5.4.0
 ipykernel==5.5.6
 ipython==7.16.3
 ipython-genutils==0.2.0
 jedi==0.17.2
+joblib==1.1.0
 jupyter-client==7.1.2
 jupyter-core==4.9.2
 keras==2.6.0
@@ -32,6 +37,7 @@ Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 Markdown==3.3.6
 matplotlib==3.3.4
+natsort==8.1.0
 nest-asyncio==1.5.4
 netron==5.6.6
 networkx==2.5.1
@@ -39,6 +45,7 @@ numpy==1.19.5
 oauthlib==3.2.0
 opencv-python==4.5.5.64
 opt-einsum==3.3.0
+packaging==21.3
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -54,10 +61,13 @@ Pygments==2.11.2
 pyparsing==3.0.7
 python-dateutil==2.8.2
 PyWavelets==1.1.1
+PyYAML==6.0
 pyzmq==22.3.0
+regex==2022.3.15
 requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
+sacremoses==0.0.49
 scikit-image==0.17.2
 scipy==1.5.4
 six==1.15.0
@@ -68,6 +78,7 @@ tensorflow==2.6.2
 tensorflow-estimator==2.6.0
 termcolor==1.1.0
 tifffile==2020.9.3
+tokenizers==0.12.1
 torch==1.10.1
 torchaudio==0.10.1
 torchinfo==1.5.4
@@ -75,7 +86,9 @@ torchsummary==1.5.1
 torchvision==0.11.2
 torchviz==0.0.2
 tornado==6.1
+tqdm==4.64.0
 traitlets==4.3.3
+transformers==4.18.0
 typing-extensions==3.7.4.3
 urllib3==1.26.9
 wcwidth==0.2.5
