--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 absl-py==0.15.0
+albumentations==1.2.0
 astunparse==1.6.3
 backcall==0.2.0
 cached-property==1.5.2
 cachetools==4.2.4
-certifi==2021.10.8
+certifi==2021.5.30
+chardet==4.0.0
 charset-normalizer==2.0.12
 clang==5.0
 click==8.0.4
-cycler==0.11.0
+cycler==0.10.0
 dataclasses==0.8
 decorator==4.4.2
 entrypoints==0.4
@@ -21,7 +23,7 @@ graphviz==0.19.1
 grpcio==1.44.0
 h5py==3.1.0
 huggingface-hub==0.4.0
-idna==3.3
+idna==2.10
 imageio==2.15.0
 importlib-metadata==4.8.3
 importlib-resources==5.4.0
@@ -32,6 +34,7 @@ jedi==0.17.2
 joblib==1.1.0
 jupyter-client==7.1.2
 jupyter-core==4.9.2
+kaggle==1.5.12
 keras==2.6.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
@@ -44,8 +47,10 @@ networkx==2.5.1
 numpy==1.19.5
 oauthlib==3.2.0
 opencv-python==4.5.5.64
+opencv-python-headless==4.6.0.66
 opt-einsum==3.3.0
 packaging==21.3
+pandas==1.1.5
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -58,18 +63,26 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycocotools==2.0.4
 Pygments==2.11.2
-pyparsing==3.0.7
+pyparsing==2.4.7
 python-dateutil==2.8.2
+python-dotenv==0.20.0
+python-slugify==6.1.1
+pytz==2022.1
 PyWavelets==1.1.1
 PyYAML==6.0
 pyzmq==22.3.0
+qudida==0.0.4
 regex==2022.3.15
 requests==2.27.1
 requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+roboflow==0.2.4
 rsa==4.8
 sacremoses==0.0.49
 scikit-image==0.17.2
+scikit-learn==0.24.2
 scipy==1.5.4
+seaborn==0.11.2
 six==1.15.0
 tensorboard==2.6.0
 tensorboard-data-server==0.6.1
@@ -77,6 +90,8 @@ tensorboard-plugin-wit==1.8.1
 tensorflow==2.6.2
 tensorflow-estimator==2.6.0
 termcolor==1.1.0
+text-unidecode==1.3
+threadpoolctl==3.1.0
 tifffile==2020.9.3
 tokenizers==0.12.1
 torch==1.10.1
@@ -89,9 +104,11 @@ tornado==6.1
 tqdm==4.64.0
 traitlets==4.3.3
 transformers==4.18.0
+ttach==0.0.3
 typing-extensions==3.7.4.3
-urllib3==1.26.9
+urllib3==1.26.6
 wcwidth==0.2.5
 Werkzeug==2.0.3
+wget==3.2
 wrapt==1.12.1
 zipp==3.6.0
