convert image to RLE

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ src/data/crack/
 src/data/crack_test_origin/
 src/data/joo_3/
 src/data/saved_patches_2/
+src/data/*.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
